--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -974,16 +974,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2a7811e] 5-listfilesdigitonly\n",
-      " 2 files changed, 108 insertions(+), 63 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/5-listfilesdigitonly\n"
+      "[main ff892e3] 5-listfilesdigitonly\n",
+      " 2 files changed, 27 insertions(+), 33 deletions(-)\n"
      ]
     },
     {
@@ -991,7 +990,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1b33355..2a7811e  main -> main\n"
+      "   07b8252..ff892e3  main -> main\n"
      ]
     }
    ],
@@ -1040,44 +1039,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/6-firstdirectory\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/6-firstdirectory\n",
+    "#!/bin/bash\n",
+    "mkdir /tmp/my_first_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The system cannot find the path specified.\n",
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "mkdir: cannot create directory ‘/tmp/my_first_directory’: File exists\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 7593c11]  gitignore\n",
-      " 2 files changed, 43 insertions(+)\n",
-      " create mode 100644 0x03-git/.gitignore\n",
-      "branch 'main' set up to track 'origin/main'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   173f40f..7593c11  main -> main\n",
-      "warning: branch.main.remote has multiple values\n",
-      "warning: branch.main.merge has multiple values\n"
+      "my_first_directory\n",
+      "pyright-1478-F4WFlu26OPzg\n",
+      "pyright-1478-eJVpJeSwjRUD\n",
+      "pyright-1478-gbqzZG7Uvn5B\n",
+      "pyright-1478-y01yOzXMpK1B\n",
+      "python-languageserver-cancellation\n",
+      "snap-private-tmp\n",
+      "systemd-private-1797bdebbffc4ba4ad9aaa81ae87ebf6-ModemManager.service-XpmyVf\n",
+      "systemd-private-1797bdebbffc4ba4ad9aaa81ae87ebf6-systemd-logind.service-EaPdgj\n",
+      "systemd-private-1797bdebbffc4ba4ad9aaa81ae87ebf6-systemd-resolved.service-5hEDYe\n"
      ]
     }
    ],
    "source": [
-    "!cd ~/alx-zero_day/\n",
-    "!echo \"*~\" > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/.gitignore\"\n",
-    "!git add .\n",
-    "!git commit -m \" gitignore\"\n",
-    "!git push -u origin main"
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/6-firstdirectory\n",
+    "./0x00-shell_basics/6-firstdirectory\n",
+    "ls /tmp/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"6-firstdirectory\"\n",
+    "git push"
    ]
   },
   {
