--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1094,6 +1094,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main f31a154] 6-firstdirectory\n",
+      " 3 files changed, 53 insertions(+), 25 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/6-firstdirectory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   ff892e3..f31a154  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"6-firstdirectory\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 7.Betty in my first directory </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Move the file betty from /tmp/ to /tmp/my_first_directory.\n",
+    "\n",
+    "##### Example:\n",
+    "```bash\n",
+    "$ ./7-movethatfile\n",
+    "$ ls /tmp/my_first_directory/\n",
+    "betty\n",
+    "$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `7-movethatfile`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/7-movethatfile\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/7-movethatfile\n",
+    "#!/bin/bash\n",
+    "mv /tmp/betty /tmp/my_first_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mv: cannot stat '/tmp/betty': No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_first_directory\n",
+      "pyright-9863-3yBGUfZlxDqq\n",
+      "pyright-9863-9QzMys6VU6ZY\n",
+      "pyright-9863-gyFPUbndjCI5\n",
+      "python-languageserver-cancellation\n",
+      "snap-private-tmp\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-ModemManager.service-2xfSxf\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-logind.service-vJoCkf\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-resolved.service-n0ZkLf\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/7-movethatfile\n",
+    "./0x00-shell_basics/7-movethatfile\n",
+    "ls /tmp/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
