--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1214,13 +1214,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 4f4b402] 7-movethatfile\n",
+      " 2 files changed, 122 insertions(+)\n",
+      " create mode 100755 0x00-shell_basics/7-movethatfile\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   f31a154..4f4b402  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"6-firstdirectory\"\n",
+    "git commit -m \"7-movethatfile\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 8.Bye bye Betty </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Delete the file betty.\n",
+    "\n",
+    "* The file betty is in /tmp/my_first_directory\n",
+    "\n",
+    "##### Example:\n",
+    "```bash\n",
+    "$ ./8-firstdelete\n",
+    "$ ls /tmp/my_first_directory/\n",
+    "$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: ` 8-firstdelete`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/8-firstdelete\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/8-firstdelete\n",
+    "#!/bin/bash\n",
+    "rm /tmp/my_first_directory/betty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove '/tmp/my_first_directory/betty': No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_first_directory\n",
+      "pyright-9863-3yBGUfZlxDqq\n",
+      "pyright-9863-9QzMys6VU6ZY\n",
+      "pyright-9863-gyFPUbndjCI5\n",
+      "python-languageserver-cancellation\n",
+      "snap-private-tmp\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-ModemManager.service-2xfSxf\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-logind.service-vJoCkf\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-resolved.service-n0ZkLf\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/8-firstdelete\n",
+    "./0x00-shell_basics/8-firstdelete\n",
+    "ls /tmp/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 4f4b402] 7-movethatfile\n",
+      " 2 files changed, 122 insertions(+)\n",
+      " create mode 100755 0x00-shell_basics/7-movethatfile\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   f31a154..4f4b402  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"8-firstdelete\"\n",
     "git push"
    ]
   },
