--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1335,16 +1335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 4f4b402] 7-movethatfile\n",
-      " 2 files changed, 122 insertions(+)\n",
-      " create mode 100755 0x00-shell_basics/7-movethatfile\n"
+      "[main 48b966a] 8-firstdelete\n",
+      " 2 files changed, 143 insertions(+), 2 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/8-firstdelete\n"
      ]
     },
     {
@@ -1352,7 +1352,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f31a154..4f4b402  main -> main\n"
+      "   4f4b402..48b966a  main -> main\n"
      ]
     }
    ],
@@ -1360,6 +1360,129 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"8-firstdelete\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 8.Bye bye My first directory</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Delete the directory my_first_directory that is in the `/tmp` directory.\n",
+    "\n",
+    "##### Example:\n",
+    "```bash\n",
+    "$ ./9-firstdirdeletion\n",
+    "$ file /tmp/my_first_directory\n",
+    "/tmp/my_first_directory: cannot open `/tmp/my_first_directory' (No such file or directory)\n",
+    "$\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `  9-firstdirdeletion`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/9-firstdirdeletion\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/9-firstdirdeletion\n",
+    "#!/bin/bash\n",
+    "rm -r /tmp/my_first_directory/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 2: ./0x00-shell_basics/9-firstdirdeletion: Permission denied\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/tmp/my_first_directory: directory\n",
+      "my_first_directory\n",
+      "pyright-9863-3yBGUfZlxDqq\n",
+      "pyright-9863-9QzMys6VU6ZY\n",
+      "pyright-9863-gyFPUbndjCI5\n",
+      "pyright-9863-hqvX5SBuKjzU\n",
+      "python-languageserver-cancellation\n",
+      "snap-private-tmp\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-ModemManager.service-2xfSxf\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-logind.service-vJoCkf\n",
+      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-resolved.service-n0ZkLf\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/8-firstdelete\n",
+    "./0x00-shell_basics/9-firstdirdeletion\n",
+    "file /tmp/my_first_directory\n",
+    "ls /tmp/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 48b966a] 8-firstdelete\n",
+      " 2 files changed, 143 insertions(+), 2 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/8-firstdelete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   4f4b402..48b966a  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"9-firstdelete\"\n",
     "git push"
    ]
   },
