--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1458,16 +1458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 48b966a] 8-firstdelete\n",
-      " 2 files changed, 143 insertions(+), 2 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/8-firstdelete\n"
+      "[main 13cdb6f] 9-firstdelete\n",
+      " 2 files changed, 130 insertions(+), 5 deletions(-)\n",
+      " create mode 100644 0x00-shell_basics/9-firstdirdeletion\n"
      ]
     },
     {
@@ -1475,14 +1475,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   4f4b402..48b966a  main -> main\n"
+      "   48b966a..13cdb6f  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"9-firstdelete\"\n",
+    "git commit -m \"9-firstdirdeletion\"\n",
     "git push"
    ]
   },
