--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1401,41 +1401,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/9-firstdirdeletion\n"
+      "Overwriting 0x00-shell_basics/9-firstdirdeletion\n"
      ]
     }
    ],
    "source": [
     "%%file 0x00-shell_basics/9-firstdirdeletion\n",
     "#!/bin/bash\n",
-    "rm -r /tmp/my_first_directory/"
+    "rm -rf /tmp/my_first_directory/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bash: line 2: ./0x00-shell_basics/9-firstdirdeletion: Permission denied\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/my_first_directory: directory\n",
-      "my_first_directory\n",
+      "/tmp/my_first_directory: cannot open `/tmp/my_first_directory' (No such file or directory)\n",
       "pyright-9863-3yBGUfZlxDqq\n",
       "pyright-9863-9QzMys6VU6ZY\n",
       "pyright-9863-gyFPUbndjCI5\n",
@@ -1450,7 +1442,7 @@
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/8-firstdelete\n",
+    "chmod u+x 0x00-shell_basics/9-firstdirdeletion\n",
     "./0x00-shell_basics/9-firstdirdeletion\n",
     "file /tmp/my_first_directory\n",
     "ls /tmp/\n"
@@ -1458,16 +1450,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 13cdb6f] 9-firstdelete\n",
-      " 2 files changed, 130 insertions(+), 5 deletions(-)\n",
-      " create mode 100644 0x00-shell_basics/9-firstdirdeletion\n"
+      "[main 86d5bc6] 9-firstdirdeletion\n",
+      " 1 file changed, 6 insertions(+), 6 deletions(-)\n"
      ]
     },
     {
@@ -1475,7 +1466,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   48b966a..13cdb6f  main -> main\n"
+      "   13cdb6f..86d5bc6  main -> main\n"
      ]
     }
    ],
