--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1372,7 +1372,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 8.Bye bye My first directory</h4>\n",
+    "<h4> 9.Bye bye My first directory</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1382,7 +1382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Delete the directory my_first_directory that is in the `/tmp` directory.\n",
+    "##### Delete the directory `my_first_directory` that is in the `/tmp` directory.\n",
     "\n",
     "##### Example:\n",
     "```bash\n",
@@ -1450,15 +1450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 86d5bc6] 9-firstdirdeletion\n",
-      " 1 file changed, 6 insertions(+), 6 deletions(-)\n"
+      "[main 3431094] 9-firstdirdeletion\n",
+      " 2 files changed, 11 insertions(+), 20 deletions(-)\n",
+      " mode change 100644 => 100755 0x00-shell_basics/9-firstdirdeletion\n"
      ]
     },
     {
@@ -1466,7 +1467,123 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   13cdb6f..86d5bc6  main -> main\n"
+      "   86d5bc6..3431094  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"9-firstdirdeletion\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 10.Back to the future</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a script that changes the working directory to the previous one.\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp$ pwd\n",
+    "/tmp\n",
+    "julien@ubuntu:/tmp$ cd /var\n",
+    "julien@ubuntu:/var$ pwd\n",
+    "/var\n",
+    "julien@ubuntu:/var$ source ./10-back\n",
+    "/tmp\n",
+    "julien@ubuntu:/tmp$ pwd\n",
+    "/tmp\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `10-back`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/10-back\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/10-back\n",
+    "#!/bin/bash\n",
+    "cd -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "./0x00-shell_basics/10-back: line 2: cd: OLDPWD not set\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/elkomy/alx-system_engineering-devops\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/10-back\n",
+    "source ./0x00-shell_basics/10-back\n",
+    "pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 3431094] 9-firstdirdeletion\n",
+      " 2 files changed, 11 insertions(+), 20 deletions(-)\n",
+      " mode change 100644 => 100755 0x00-shell_basics/9-firstdirdeletion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   86d5bc6..3431094  main -> main\n"
      ]
     }
    ],
