--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1566,16 +1566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3431094] 9-firstdirdeletion\n",
-      " 2 files changed, 11 insertions(+), 20 deletions(-)\n",
-      " mode change 100644 => 100755 0x00-shell_basics/9-firstdirdeletion\n"
+      "[main cbf178f] 10-back\n",
+      " 2 files changed, 125 insertions(+), 6 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/10-back\n"
      ]
     },
     {
@@ -1583,14 +1583,119 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   86d5bc6..3431094  main -> main\n"
+      "   3431094..cbf178f  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"9-firstdirdeletion\"\n",
+    "git commit -m \"10-back\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 11.Lists</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a script that lists all files (even ones with names beginning with a period character, which are normally hidden) in the current directory and the parent of the working directory and the `/boot` directory (in this order), in long format.\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `11-lists`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/11-lists\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/11-lists\n",
+    "#!/bin/bash\n",
+    "ls -la"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 72\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 27 21:45 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 27 21:54 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
+      "-rw-r--r--  1 elkomy elkomy 46208 Feb 27 21:54 alx-system_engineering-devops.ipynb\n",
+      "/home/elkomy/alx-system_engineering-devops\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/11-lists\n",
+    "source ./0x00-shell_basics/11-lists\n",
+    "pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main cbf178f] 10-back\n",
+      " 2 files changed, 125 insertions(+), 6 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/10-back\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   3431094..cbf178f  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"11-lists\"\n",
     "git push"
    ]
   },
