--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1624,40 +1624,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/11-lists\n"
+      "Overwriting 0x00-shell_basics/11-lists\n"
      ]
     }
    ],
    "source": [
     "%%file 0x00-shell_basics/11-lists\n",
     "#!/bin/bash\n",
-    "ls -la"
+    "ls -la . .. /boot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ".:\n",
       "total 72\n",
       "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
       "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 27 21:45 .git\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 27 21:55 .git\n",
       "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
       "drwxr-xr-x  2 elkomy elkomy  4096 Feb 27 21:54 0x00-shell_basics\n",
       "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
-      "-rw-r--r--  1 elkomy elkomy 46208 Feb 27 21:54 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy 46579 Feb 27 21:57 alx-system_engineering-devops.ipynb\n",
+      "\n",
+      "..:\n",
+      "total 132\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 .\n",
+      "drwxr-xr-x  3 root   root    4096 Feb  9 21:36 ..\n",
+      "-rw-------  1 elkomy elkomy  2135 Feb 25 04:50 .bash_history\n",
+      "-rw-r--r--  1 elkomy elkomy   220 Feb  9 21:36 .bash_logout\n",
+      "-rw-r--r--  1 elkomy elkomy  4250 Feb 10 10:53 .bashrc\n",
+      "drwx------  4 elkomy elkomy  4096 Feb 10 11:16 .cache\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 10 11:02 .conda\n",
+      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 11:01 .dotnet\n",
+      "-rw-r--r--  1 elkomy elkomy    56 Feb 10 16:01 .gitconfig\n",
+      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 11:50 .ipython\n",
+      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 24 17:51 .jupyter\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb  9 21:36 .landscape\n",
+      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 10:54 .local\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb 27 20:37 .motd_shown\n",
+      "drwx------  3 elkomy elkomy  4096 Feb 10 11:02 .nv\n",
+      "-rw-r--r--  1 elkomy elkomy   807 Feb  9 21:36 .profile\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb  9 22:01 .sudo_as_admin_successful\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 10 19:07 .vscode\n",
+      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 10:58 .vscode-remote-containers\n",
+      "drwxr-xr-x  5 elkomy elkomy  4096 Feb 10 10:58 .vscode-server\n",
+      "-rw-r--r--  1 elkomy elkomy   478 Feb 10 10:53 .zshrc\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 alx-system_engineering-devops\n",
+      "-rw-r--r--  1 elkomy elkomy 32288 Feb 10 18:47 alx-system_engineering-devops.ipynb\n",
+      "drwxr-xr-x 32 elkomy elkomy  4096 Feb 10 10:52 anaconda3\n",
+      "-rw-r--r--  1 elkomy elkomy  3853 Feb 10 18:49 control.ipynb\n",
+      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 24 21:02 cplayground\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 10 13:15 zero_day\n",
+      "\n",
+      "/boot:\n",
+      "total 8\n",
+      "drwxr-xr-x  2 root root 4096 May 31  2023 .\n",
+      "drwxr-xr-x 19 root root 4096 Feb 27 20:37 ..\n",
       "/home/elkomy/alx-system_engineering-devops\n"
      ]
     }
@@ -1671,16 +1707,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main cbf178f] 10-back\n",
-      " 2 files changed, 125 insertions(+), 6 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/10-back\n"
+      "[main b0df28c] 11-lists\n",
+      " 2 files changed, 112 insertions(+), 5 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/11-lists\n"
      ]
     },
     {
@@ -1688,7 +1724,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3431094..cbf178f  main -> main\n"
+      "   cbf178f..b0df28c  main -> main\n"
      ]
     }
    ],
