--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1707,16 +1707,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b0df28c] 11-lists\n",
-      " 2 files changed, 112 insertions(+), 5 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/11-lists\n"
+      "[main ba21aaf] 11-lists\n",
+      " 2 files changed, 48 insertions(+), 12 deletions(-)\n"
      ]
     },
     {
@@ -1724,7 +1723,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   cbf178f..b0df28c  main -> main\n"
+      "   b0df28c..ba21aaf  main -> main\n"
      ]
     }
    ],
