--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1707,15 +1707,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ba21aaf] 11-lists\n",
-      " 2 files changed, 48 insertions(+), 12 deletions(-)\n"
+      "[main f504d26] 11-lists\n",
+      " 1 file changed, 4 insertions(+), 5 deletions(-)\n"
      ]
     },
     {
@@ -1723,7 +1723,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b0df28c..ba21aaf  main -> main\n"
+      "   ba21aaf..f504d26  main -> main\n"
      ]
     }
    ],
@@ -1731,6 +1731,106 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"11-lists\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 12.File type</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a script that prints the type of the file named `iamafile`. The file `iamafile` will be in the `/tmp` directory when we will run your script.\n",
+    "\n",
+    "##### Example\n",
+    "```bash\n",
+    "ubuntu@ip-172-31-63-244:~$ ./12-file_type\n",
+    "/tmp/iamafile: ELF 64-bit LSB  executable, x86-64, version 1 (SYSV), dynamically linked (uses shared libs), for GNU/Linux 2.6.24, BuildID[sha1]=bd39c07194a778ccc066fc963ca152bdfaa3f971, stripped\n",
+    "```\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `12-file_type`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/12-file_type\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/12-file_type\n",
+    "#!/bin/bash\n",
+    "file /tmp/iamafile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/tmp/iamafile: cannot open `/tmp/iamafile' (No such file or directory)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/12-file_type\n",
+    "source ./0x00-shell_basics/12-file_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main f504d26] 11-lists\n",
+      " 1 file changed, 4 insertions(+), 5 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   ba21aaf..f504d26  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"12-file_type\"\n",
     "git push"
    ]
   },
