--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1807,15 +1807,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f504d26] 11-lists\n",
-      " 1 file changed, 4 insertions(+), 5 deletions(-)\n"
+      "[main 94a5f7f] 12-file_type\n",
+      " 2 files changed, 106 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/12-file_type\n"
      ]
     },
     {
@@ -1823,7 +1824,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ba21aaf..f504d26  main -> main\n"
+      "   f504d26..94a5f7f  main -> main\n"
      ]
     }
    ],
@@ -1831,6 +1832,107 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"12-file_type\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 13. We are symbols, and inhabit symbols</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a symbolic link to `/bin/ls`, named `__ls__`. The symbolic link should be created in the current working directory.\n",
+    "\n",
+    "##### Example\n",
+    "```bash\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
+    "total 144\n",
+    "drwxrwxr-x  2 ubuntu ubuntu   4096 Sep 20 03:24 .\n",
+    "drwxrwxrwt 12 root   root   139264 Sep 20 03:24 ..\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$./13-symbolic_link\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
+    "total 144\n",
+    "drwxrwxr-x  2 ubuntu ubuntu   4096 Sep 20 03:24 .\n",
+    "drwxrwxrwt 12 root   root   139264 Sep 20 03:24 ..\n",
+    "lrwxrwxrwx  1 ubuntu ubuntu      7 Sep 20 03:24 __ls__ -> /bin/ls\n",
+    "```\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `13-symbolic_link`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/13-symbolic_link\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/13-symbolic_link\n",
+    "#!/bin/bash\n",
+    "ln -s /bin/ls __ls__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/13-symbolic_link\n",
+    "source ./0x00-shell_basics/13-symbolic_link\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 94a5f7f] 12-file_type\n",
+      " 2 files changed, 106 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/12-file_type\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   f504d26..94a5f7f  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"13-symbolic_link\"\n",
     "git push"
    ]
   },
