--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1897,27 +1897,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "chmod u+x 0x00-shell_basics/13-symbolic_link\n",
-    "source ./0x00-shell_basics/13-symbolic_link\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 94a5f7f] 12-file_type\n",
-      " 2 files changed, 106 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/12-file_type\n"
+      "total 80\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:25 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:25 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:24 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
+      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
+      "-rw-r--r--  1 elkomy elkomy 53716 Feb 28 00:26 alx-system_engineering-devops.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/13-symbolic_link\n",
+    "#source ./0x00-shell_basics/13-symbolic_link\n",
+    "ls -la"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main e07588b] 13-symbolic_link\n",
+      " 3 files changed, 109 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/13-symbolic_link\n",
+      " create mode 120000 __ls__\n"
      ]
     },
     {
@@ -1925,7 +1943,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f504d26..94a5f7f  main -> main\n"
+      "   94a5f7f..e07588b  main -> main\n"
      ]
     }
    ],
